<resources>
    <string name="app_name">Projektmanagment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">StudyApp</string>
    <string name="nav_header_subtitle">Peter, Nils, Dardan, Dorian, Philip </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Einstellungen</string>

    <string name="menu_home">Home</string>
    <string name="menu_vorlesung">Vorlesung</string>
    <string name="menu_aufgabe">Aufgabe</string>
    <string name="menu_links">Links</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_professor">Professoren</string>
    <string name="menu_sekretaer">Sekretariate</string>
    <string name="title_activity_professor">Professor</string>
    <string name="title_activity_sekretaer">Sekretariate</string>

    <string name="vorlesung_name">Vorlesung</string>
    <string name="vorlesung_button">Hinzufügen</string>
    <string name="vorlesung_grad">Verstaendnisgrad</string>

    <string name="aufgabe_name">Aufgabe</string>
    <string name="aufgabe_button">Hinzufügen</string>
    <string name="aufgabe_text">Text</string>

    <string name="links_heading">Nuetzliche Links</string>
    <string name="links_content0">DHBW-Stuttgart Startseite:</string>
    <string name="links_content1">https://www.dhbw-stuttgart.de/home/</string>
    <string name="links_content2">Dualis-Anmeldeseite:</string>
    <string name="links_content3"><![CDATA[https://dualis.dhbw.de/scripts/mgrqispi.dll?APPNAME=CampusNet&PRGNAME=EXTERNALPAGES&ARGUMENTS=-N000000000000001,-N000324,-Awelcome]]></string>
    <string name="links_content4">Stundenplan:</string>
    <string name="links_content5"><![CDATA[https://rapla.dhbw-stuttgart.de/rapla?key=txB1FOi5xd1wUJBWuX8lJhGDUgtMSFmnKLgAG_NVMhDYQlWcKV3rgjcyw9FrmdJi&day=26&month=11&year=2018&today=Heute]]></string>
    <string name="links_content6">Datei-Austausch:</string>
    <string name="links_content7">https://www.dropbox.com/sh/aqgr4oxsuf4ixug/AACDnvfoccZl1Q1N6h93lLIAa?dl=0</string>
    <string name="links_content8">Auslandinformationen:</string>
    <string name="links_content9">https://www.dhbw-stuttgart.de/themen/internationales/auslandsaufenthalte/</string>
    <string name="links_content10">Moodle:</string>
    <string name="links_content11">https://elearning.dhbw-stuttgart.de/moodle/</string>
    <string name="dialog_message">Done</string>
    <string name="dialog_title">Vorlesung!</string>
</resources>
